--- a/css/style.css
+++ b/css/style.css
@@ -17,15 +17,22 @@
     --headerlighter:  rgb(49, 44, 75); 
 }
 
+* {
+/* box-sizing: border-box; */
+}
 
 /* Text */
 h1, h2, h3 , h4, h5, h6 {
 font-family: 'Anton', sans-serif;
 }
+
 p {
 font-family: 'Jura', sans-serif;
 }
 
+.display-4 {
+  margin: 50px 0 0 0 !important;
+}
 /* Navigation bar */
 
 /* General */
@@ -66,18 +73,17 @@ margin: 0px 15px;
 
 /* Navigation dropdown menu */
 .dropdown-menu {
-/* background: url("../images/transparency.png"); */
-background-image: linear-gradient(
+  border-color: none;
+  background-image: linear-gradient(
     rgba(0, 99, 99, 0.6) 0%,
     rgb(0, 99, 99) 100%
   );
 background-color: transparent !important;
 background-size: cover;
-    margin: 6px 0 12px 0;
+    margin: 10px 0 12px 0;
 }
 
 .dropdown-item:focus, .dropdown-item:hover {
-    /* color: #16181b; */
     text-decoration: none;
     background: transparent;
 }
@@ -106,23 +112,69 @@ color: var(--gin) !important;
   .jumbotron {
     background-color: var(--blue);
     height: calc(100vh - 25px);
-    display: flex;
+    min-height: 725px;
+    display: flex !important;
     align-items: center;
     justify-content: center;
     margin: 0;
   }
 
-@media only screen and (min-width: 576px) {
+@media only screen and (max-width: 820px) {
   .jumbotron {
   background-color: var(--blue);
+  min-height: 725px !important;
+  /* padding: 164px 0 100px 0 !important; */
 } 
+  .jumbotron2 {
+  background-color: var(--gin);
+  } 
+.jumboCopy {
+  margin: 0 0 0 0 !important;
+}
+.jumboCopy2 {
+  margin: 0 0 0 !important;
+}
 }
 
-@media only screen and (max-width: 575px) {
+@media only screen and (max-width: 390px) {
   .jumbotron {
   background-color: var(--blue);
+  min-height: 725px !important;
+  padding: 164px 0 100px 0 !important;
 } 
+  .jumbotron2 {
+  background-color: var(--gin);
+  } 
+  .jumboCopy {
+    margin: 0 0 0 !important;
+  }
+  .jumboCopy2 {
+    margin: 0 0 0 !important;
+  }
 }
+
+
+.jumbotron2 {
+  background-color: var(--gin);
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+}
+
+/* .sectioncontent {
+  width: 70%;
+} */
+
+.jumbocopy2 {
+  width: 100%;
+  /* min-width: 500px;
+  max-width: 700px; */
+  color: var(--blue);
+  text-align: center;
+  margin: auto;
+}
+
   
   /* Jumbotron copy */
   .jumboCopy {
@@ -248,4 +300,10 @@ margin: 0 auto;
     transition: all 0.5s ease-in-out;
     /* text-shadow: inset 0px 0px 20px var(--white), 0 0 30px var(--white) !important; */
     text-shadow: 0 0 5px rgb(255, 255, 255), 0 0 10px rgb(255, 255, 255), 0 0 15px rgb(255, 255, 255), 0 0 20px rgb(255, 255, 255), 0 0 25px rgb(255, 255, 255), 0 0 30px rgb(255, 255, 255), 0 0 35px rgb(255, 255, 255);
+}
+
+.navbar-icon2:hover {
+  transition: all 0.5s ease-in-out;
+  -webkit-filter: drop-shadow(0 0 10px rgb(255, 255, 255));
+  filter: drop-shadow(0 0 10px rgb(255, 255, 255));
 }
